# agent-eye

./: .gitignore  Dockerfile  README.md  SKILL.md  background.js  capture-to-notes.py  hermes-read-page.py  manifest.json  options.html  options.js  popup.html  popup.js  pyproject.toml  store-listing.md
icons/: generate-icons.py
server/: __init__.py  main.py
~/.agentb/agents/hermes/: vec_index.sqlite-shm  vec_index.sqlite-wal
~/.agentb/agents/hermes/cache/l1/: 691c3d8203bb.json  774ddd12c000.json  b7a6494e0464.json
~/.agentb/agents/hermes/cache/l2/: index.json
~/.agentb/agents/hermes/memory/: 0110803eb42962a1.json  a3b6603af8983c84.json  b8875c093f440626.json
~/.agentb/agents/openclaw/: vec_index.sqlite-shm  vec_index.sqlite-wal
~/.agentb/agents/openclaw/cache/l1/: 16b9f45c9049.json  18ecb6683215.json  9a4fb8f75cb7.json  9fca6ea6c7d5.json  f789aa0a70dc.json
~/.agentb/agents/openclaw/cache/l2/: index.json
~/.agentb/agents/openclaw/memory/: 026bd5ded0833213.json  619d891778e91a4a.json  da7328cf4a4402be.json  e286edc5799d80ee.json  ebe8c516afe2e2ea.json
