[project]
name = "agent-eye"
version = "1.0.0"
description = "Share browser page data with Hermes AI — Chrome extension + API server"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Hermes AI Contributors" },
]

requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
hermes-pviz = "server.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
